tests/NormalTests/paczka2/big_fuzzy/51104504.err
Error in line 3: S449 S449 75,04
Error in line 2: yVzn S461 84,6
Error in line 34: nub S927 73,5
Error in line 32: S449 S461 93,3
Error in line 39: S449 A156 96,4
Error in line 38: ASNUv A156 43,2
Error in line 41: ASNUv S927 88,3
Error in line 43: ASNUv S461 70,7
Error in line 52: GKC S927 7,8
Error in line 65: NN4YZT6e S449 70,0
Error in line 68: VT6PndDzg S449 83,9
Error in line 99: nub S449 83,7
Error in line 96: NN4YZT6e A156 59,2
Error in line 103: NN4YZT6e S927 7,0
Error in line 100: ASNUv S449 16,3
Error in line 105: GKC S927 16,5
Error in line 101: yVzn S449 43,7
Error in line 119: nub S927 35,0
Error in line 120: ASNUv S449 91,2
Error in line 125: ASNUv S927 54,4
Error in line 117: yVzn A156 2,0
Error in line 134: GKC A156 17,8
Error in line 137: GKC S461 44,0
Error in line 136: ASNUv S449 72,4
Error in line 143: ASNUv S927 -4,@
Error in line 138: GKC S449 14,3
Error in line 145: GKC A156 15,9
Error in line 146: GKC S927 22,6
Error in line 152: GKC S461 25,9
Error in line 135: yVzn S461 75,1
Error in line 140: ASNUv S927 67,6
Error in line 155: GKC S927 12,7
Error in line 157: ASNUv A156 93,1
Error in line 160: ASNUv S927 51,5
Error in line 167: GKC S927 43,81
Error in line 168: GKC A156 80,6
Error in line 174: ASNUv S461 -2,0
Error in line 180: yVzn S449 4,43
Error in line 164: ASNUv S461 39,2
Error in line 177: S449 A156 117,4
Error in line 148: NN4YZT6e A156 31,7
Error in line 188: VT6PndDzg S449 54,7
Error in line 191: VT6PndDzg S461 75,6
Error in line 196: VT6PndDzg S449 41,2
Error in line 209: GKC S461 57,9
Error in line 193: yVzn S449 16,8
Error in line 203: nub S927 26,7
Error in line 228: ASNUv S927 98,1
Error in line 230: VT6PndDzg S461 299,1
Error in line 237: S449 A156 94,6
Error in line 240: S449 S449 30,8
Error in line 241: yVzn A156 61,4
